objects/LBI__LatticeSyncBatchRun__c.object
<CustomObject>
    <fields>
        <fullName>LBI__BatchSyncRunEnd__c</fullName>
        <label>Batch Sync Run End</label>
        <summarizedField>LBI__LatticeSyncBatchStep__c.LBI__BatchEndTime__c</summarizedField>
        <summaryForeignKey>LBI__LatticeSyncBatchStep__c.LBI__LatticeSyncBatchRun__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__BatchSyncRunStart__c</fullName>
        <label>Batch Sync Run Start</label>
        <summarizedField>LBI__LatticeSyncBatchStep__c.LBI__BatchStartTime__c</summarizedField>
        <summaryForeignKey>LBI__LatticeSyncBatchStep__c.LBI__LatticeSyncBatchRun__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__ChainName__c</fullName>
        <label>Chain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Sync Batch Runs</relationshipLabel>
        <relationshipName>LatticeSyncBatchRuns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Sync Batch Run</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__ChainName__c</columns>
        <columns>LBI__BatchSyncRunStart__c</columns>
        <columns>LBI__Status__c</columns>
        <columns>LBI__LatticeApplicationRegion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Lattice</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LBI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SBR-{0000000000}</displayFormat>
        <label>Sync Batch Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Sync Batch Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>